--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="WindowsExport"
+name="v0.4"
 platform="Windows Desktop"
 runnable=true
 advanced_options=true
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./Project Burg v0.3.exe"
+export_path="./Project Burg v0.4.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
